# nlp-dl

./: README.md  pyproject.toml
assn1/: exploring_word_vectors.ipynb
cs-224n/assn1/: exploring_word_vectors.ipynb
cs-224n/assn2/: sgd.py  word2vec.py
cs-224n/assn2/a2/: word2vec.py
cs-224n/assn2/a2/utils/: __init__.py
tests/: test_nlp_dl.py
