[tool.poetry]
name = "nlp-dl"
version = "0.1.0"
description = ""
authors = ["Pranjal Gupta <pranjalgupta2199@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^1.2.4"
scikit-learn = "^0.22"
matplotlib = "^3.1.2"
gensim = "^3.8.1"
pandas = "^0.25.3"
nltk = "^3.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
